objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>Campaign_Type__c</fullName>
        <label>Campaign Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Select whether this campaign is Automated or Rep-Driven.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DB_Campaign_Tactic__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <label>DB Campaign Tactic</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Print Advertisement</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Employment Seminars</fullName>
                </value>
                <value>
                    <fullName>Webinars</fullName>
                </value>
                <value>
                    <fullName>Public Relations</fullName>
                </value>
                <value>
                    <fullName>Partners</fullName>
                </value>
                <value>
                    <fullName>Referral Program</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Lunches</fullName>
                </value>
                <value>
                    <fullName>Direct Mail</fullName>
                </value>
                <value>
                    <fullName>Sales Call Down</fullName>
                </value>
                <value>
                    <fullName>Online Banners/Ads</fullName>
                </value>
                <value>
                    <fullName>Internal Website</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_targets__c</fullName>
        <label>Number of targets</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Play_ID__c</fullName>
        <label>Play ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Campaign_Type__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All Active Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>Operations_Joint_Force</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.TOT_OPPORTUNITIES</columns>
        <columns>TOT_AMOUNT_ALL</columns>
        <columns>CAMPAIGN.TOT_WON_OPPORTUNITIES</columns>
        <columns>TOT_AMOUNT_WON</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>PARENT_NAME</field>
            <operation>equals</operation>
            <value>OJF</value>
        </filters>
        <label>OJF - Top Level Adjacency View</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>salesPRISM_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>Play_ID__c</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>Number_of_targets__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>Product_Group__c</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>contains</operation>
            <value>SalesPrism</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>notContain</operation>
            <value>Parent</value>
        </filters>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>salesPRISM Campaigns Active List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>salesPRISM_Campaigns_Complete_List</fullName>
        <columns>Play_ID__c</columns>
        <columns>CAMPAIGN.NAME</columns>
        <columns>PARENT_NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Product_Group__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>Number_of_targets__c</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>contains</operation>
            <value>SalesPrism</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>notContain</operation>
            <value>Parent</value>
        </filters>
        <label>salesPRISM Campaigns Complete List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>salesPRISM_Campaigns_Retired_List</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>Number_of_targets__c</columns>
        <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
        <columns>AMOUNT_ALL</columns>
        <columns>CAMPAIGN.NUM_WON_OPPORTUNITIES</columns>
        <columns>AMOUNT_WON</columns>
        <columns>PARENT_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>salesPRISM</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>notContain</operation>
            <value>Parent</value>
        </filters>
        <filters>
            <field>CAMPAIGN.END_DATE</field>
            <operation>greaterThan</operation>
            <value>12/27/2014</value>
        </filters>
        <label>salesPRISM Campaigns Retired List</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>salesPRISM_Campaigns_Retired_List_G_T</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.ACTIVE</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>salesPRISM</value>
        </filters>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>notContain</operation>
            <value>Parent</value>
        </filters>
        <label>salesPRISM Campaigns Retired List - G&amp;T</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>salesPRISM_Parent_View</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.TOT_OPPORTUNITIES</columns>
        <columns>TOT_AMOUNT_ALL</columns>
        <columns>CAMPAIGN.TOT_WON_OPPORTUNITIES</columns>
        <columns>TOT_AMOUNT_WON</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.CAMPAIGN_TYPE</field>
            <operation>equals</operation>
            <value>salesPRISM Parent</value>
        </filters>
        <label>salesPRISM Parent</label>
        <language>en_US</language>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>